--- a/index.html
+++ b/index.html
@@ -113,22 +113,22 @@
 
             <div class="box">
                 <!-- <img src="images/subject-1.png" alt=""> -->
-                <h3>FMP (Financial Market Pfofession)</h3>
-                <p>Course duration: 6 Moth</p>   
+                <h3>FMP (Financial Market Profession)</h3>
+                <p>Course duration: 6 Month</p>   
             <p ><span style="text-decoration: line-through;">₹6000</span> ₹4000</p>
             </div>
 
             <div class="box">
               
                 <h3>Technical Analysis</h3>
-                <p>Course duration: 3 Moth</p>
+                <p>Course duration: 3 Month</p>
                 <p ><span style="text-decoration: line-through;">₹3000</span> ₹2000</p>
             </div>
 
             <div class="box">
            
                 <h3>Fundamental Analysis</h3>
-                <p>Course duration: 3 Moth</p>
+                <p>Course duration: 3 Month</p>
                 <p ><span style="text-decoration: line-through;">₹3000</span> ₹2000</p>
             </div>
 
@@ -665,6 +665,7 @@
             <div class="box">
                 <h3>Branch office</h3>
                 <p>Bechimari</p>
+                <p>assam</p>
                 <p>pin code: 784514</p>
             </div>
 
